ERA-6 Working editor

--- a/sys-src/era.foss.model.rif/build.properties
+++ b/sys-src/era.foss.model.rif/build.properties
@@ -1,14 +1,10 @@
-
-# <copyright>
-# </copyright>
-#
-# $Id$
-
-bin.includes = .,\
+# Eclipse properties
+bin.includes = model/rif.xsd,\
+               model/rif-xhtml.xsd
+src.includes = src/,\
                model/,\
-               META-INF/,\
-               plugin.xml,\
-               plugin.properties
-jars.compile.order = .
-source.. = src/
-output.. = bin/
+               config/,\
+               build.xml,\
+               build.properties,\
+               .project,\
+               .classpath
