--- a/sys-src/era.foss.model.rif/plugin.properties
+++ b/sys-src/era.foss.model.rif/plugin.properties
@@ -4,7 +4,7 @@
 #
 # $Id$
 
-pluginName = era.foss.model.rif Model
-providerName = www.example.org
+pluginName = era.foss.model.rif
+providerName = era.foss.model.rif
 
 _UI_Rif_content_type = Rif File
