--- a/sys-src/era.foss.model.rif/build.properties
+++ b/sys-src/era.foss.model.rif/build.properties
@@ -1,6 +1,10 @@
 # Eclipse properties
 bin.includes = model/rif.xsd,\
-               model/rif-xhtml.xsd
+               model/rif-xhtml.xsd,\
+               plugin.properties,\
+               plugin.xml,\
+               META-INF/,\
+               .
 src.includes = src/,\
                model/,\
                config/,\
@@ -8,3 +12,4 @@ src.includes = src/,\
                build.properties,\
                .project,\
                .classpath
+source.. = src/
