Implemented Document and Model, Added some sync functionality

--- a/sys-src/era.foss.model.rif.edit/plugin.properties
+++ b/sys-src/era.foss.model.rif.edit/plugin.properties
@@ -817,3 +817,4 @@ _UI_AttributeValue_type = Attribute Value
 _UI_SpecElementWithUserDefinedAttributes_type_feature = Type
 _UI_Type_type = Type
 _UI_Type_specTypeRef_feature = Spec Type Ref
+_UI_SpecElementWithUserDefinedAttributes_values_feature = Values
