--- a/sys-src/era.foss.model.rif/config/extendEcore.properties
+++ b/sys-src/era.foss.model.rif/config/extendEcore.properties
@@ -14,7 +14,7 @@ substitute.SpecRelationType: Type
 
 # Supertype configuration
 extractSuperClass.SpecType: Identifiable desc, identifier, lastChange, longName
-extractSuperClass.SpecObject: SpecElementWithUserDefinedAttributes type, desc, identifier, lastChange, longName
+extractSuperClass.SpecObject: SpecElementWithUserDefinedAttributes values, type, desc, identifier, lastChange, longName
 extractSuperClass.DatatypeDefinitionEnumeration: DatatypeDefinition desc, identifier, lastChange, longName
 extractSuperClass.DatatypeDefinitionBoolean: DatatypeDefinitionSimple desc, identifier, lastChange, longName
 extractSuperClass.DatatypeDefinitionDocument: DatatypeDefinitionComplex embedded, desc, identifier, lastChange, longName
