- First Xhtml steps are working

--- a/sys-src/era.foss.model.rif/.settings/org.eclipse.core.resources.prefs
+++ b/sys-src/era.foss.model.rif/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
-#Wed Jul 22 00:34:59 CEST 2009
+#Tue Sep 01 23:11:58 CEST 2009
 eclipse.preferences.version=1
+encoding//model/rif-xhtml.xsd=UTF8
 encoding//model/rif.xsd=UTF8
 encoding/build.properties=US-ASCII
