--- a/sys-src/era.foss.model.rif.geneditor/plugin.xml
+++ b/sys-src/era.foss.model.rif.geneditor/plugin.xml
@@ -12,14 +12,15 @@
 
    <extension point="org.eclipse.ui.newWizards">
       <category
-            id="org.eclipse.emf.ecore.Wizard.category.ID"
+            id="era.foss.model.rif.geneditor.wizard.category.ID"
             name="%_UI_Wizard_category"/>
       <wizard
-            id="era.foss.model.rif.geneditor.RifModelWizardID"
-            name="%_UI_RifModelWizard_label"
+            canFinishEarly="true"
+            category="era.foss.model.rif.geneditor.wizard.category.ID"
             class="era.foss.model.rif.geneditor.RifModelWizard"
-            category="org.eclipse.emf.ecore.Wizard.category.ID"
-            icon="icons/full/obj16/RifModelFile.gif">
+            icon="icons/full/obj16/EraFile.gif"
+            id="era.foss.model.rif.geneditor.RifModelWizardID"
+            name="%_UI_RifModelWizard_label">
          <description>%_UI_RifModelWizard_description</description>
          <selection class="org.eclipse.core.resources.IResource"/>
       </wizard>
@@ -29,7 +30,7 @@
       <editor
             id="era.foss.model.rif.geneditor.RifEditorID"
             name="%_UI_RifEditor_label"
-            icon="icons/full/obj16/RifModelFile.gif"
+            icon="icons/full/obj16/EraFile.gif"
             extensions="rif"
             class="era.foss.model.rif.geneditor.RifEditor"
             contributorClass="era.foss.model.rif.geneditor.RifActionBarContributor">
