* changing to extension="erf"

--- a/sys-src/era.foss.rif.editor/plugin.xml
+++ b/sys-src/era.foss.rif.editor/plugin.xml
@@ -30,7 +30,7 @@
             id="era.editor"
             name="%_UI_RifEditor_label"
             icon="icons/full/obj16/RifModelFile.gif"
-            extensions="rif"
+            extensions="erf"
             class="era.foss.rif.presentation.RifEditor"
             contributorClass="era.foss.rif.presentation.RifActionBarContributor">
       </editor>
