--- a/sys-src/era.foss.rif.editor/plugin.xml
+++ b/sys-src/era.foss.rif.editor/plugin.xml
@@ -8,6 +8,11 @@
  $Id$
 -->
 
+<!-- @Georg: wieso ist diese Datei eingecheckt?!
+     (Einzig diese!)
+     Es gab einen guten Grund dafür ... aber ich hab ihn vergessen.
+     -->
+
 <plugin>
 
    <extension point="org.eclipse.ui.newWizards">
