--- a/sys-src/era.foss.rif/plugin.properties
+++ b/sys-src/era.foss.rif/plugin.properties
@@ -4,6 +4,6 @@
 #
 # $Id$
 
-pluginName = Rif Model
-providerName = www.example.org
-_UI_Rif_content_type = Rif File
+pluginName = Era Rif Model
+providerName = Schorsch 'n' chr15
+_UI_Rif_content_type = Erf File
