- fix layout issues - put lables of gui elements into plugin property file

--- a/sys-src/era.foss.typeeditor/plugin.properties
+++ b/sys-src/era.foss.typeeditor/plugin.properties
@@ -6,4 +6,27 @@
 pluginName = Era Rif Types Editor
 providerName = Schorsch 'n' chr15
 
+##########
+# Labels #
+##########
+
+
 _UI_Description_label = Description
+
+# DataTypeDefinition 
+_UI_DataTypeDefinitionTab_label = Data Types
+_UI_DataTypeDefinitionTable_label = Data Types
+_UI_DataTypeDefinitionType_label = Type
+_UI_DataTypeDefinitionName_label = Name
+
+# SpecType
+_UI_SpecTypeTab_label = Specification Types
+
+# AttributeDefintion 
+_UI_AttributeDefinitionTable_label = Attributes
+_UI_AttributeDefinitionName_label = Name
+_UI_AttributeDefinitionType_label = Data Type
+_UI_AttributeDefinitionDefaultValue_label = Default Value
+
+
+
