--- a/sys-src/era.foss.objecteditor/plugin.properties
+++ b/sys-src/era.foss.objecteditor/plugin.properties
@@ -28,18 +28,18 @@ _UI_NoObjectSelected = Selected Nothing
 _UI_SingleObjectSelected = Selected Object: {0}
 _UI_MultiObjectSelected = Selected {0} Objects
 
-_UI_OpenEditorError_label = Open Editor
+_UI_OpenEditorError_label = Open ERA Editor
 
-_UI_Wizard_category = Example EMF Model Creation Wizards
+_UI_Wizard_category = ERA
 
 _UI_CreateModelError_message = Problems encountered in file "{0}"
 
-_UI_RifModelWizard_label = Rif Model
-_UI_RifModelWizard_description = Create a new Rif model
+_UI_RifModelWizard_label = ERA specification document
+_UI_RifModelWizard_description = Create new specification document
 
-_UI_RifEditor_label = ERA Rif Model Editor (vanilla)
+_UI_RifEditor_label = ERA Specification Editor
 
-_UI_RifEditorFilenameDefaultBase = My
+_UI_RifEditorFilenameDefaultBase = NewSpecification
 _UI_RifEditorFilenameExtensions = erf
 
 _UI_Wizard_label = New
