--- a/sys-src/era.foss.rif.contrib/plugin.properties
+++ b/sys-src/era.foss.rif.contrib/plugin.properties
@@ -4,7 +4,7 @@
 #
 
 pluginName = Era Rif Contrib
-providerName = Schorsch 'n' chr15
+providerName = Three Good Friends (3GF)
 
 ##########
 # Labels #
