--- a/sys-src/era.foss.rif/plugin.properties
+++ b/sys-src/era.foss.rif/plugin.properties
@@ -5,7 +5,7 @@
 # $Id$
 
 pluginName = Era Rif Model
-providerName = Schorsch 'n' chr15
+providerName = Three Good Friends (3GF)
 _UI_Rif_content_type = Erf File
 
 
