--- a/sys-src/era.foss.objecteditor/plugin.properties
+++ b/sys-src/era.foss.objecteditor/plugin.properties
@@ -5,7 +5,7 @@
 # $Id$
 
 pluginName = Era Rif Objects Editor
-providerName = Schorsch 'n' chr15
+providerName = Three Good Friends (3GF)
 
 _UI_RifEditor_menu = &Rif Editor
 
