--- a/sys-src/era.foss.rif/.settings/org.eclipse.core.resources.prefs
+++ b/sys-src/era.foss.rif/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
-#Wed Jun 16 22:50:19 CEST 2010
+#Wed Dec 01 22:17:28 CET 2010
 eclipse.preferences.version=1
+encoding//model/rif.ecorediag=UTF-8
 encoding/<project>=UTF-8
