Rename rif to erf (step2)

--- a/sys-src/era.foss.erf.contrib/plugin.properties
+++ b/sys-src/era.foss.erf.contrib/plugin.properties
@@ -3,7 +3,7 @@
 # </copyright>
 #
 
-pluginName = Era Rif Contrib
+pluginName = Era Erf Contrib
 providerName = Three Good Friends (3GF)
 
 ##########
