--- a/sys-src/era.foss.objecteditor/plugin.properties
+++ b/sys-src/era.foss.objecteditor/plugin.properties
@@ -4,10 +4,10 @@
 #
 # $Id$
 
-pluginName = Era Rif Objects Editor
+pluginName = Era Erf Objects Editor
 providerName = Three Good Friends (3GF)
 
-_UI_RifEditor_menu = &Rif Editor
+_UI_ErfEditor_menu = &Erf Editor
 
 _UI_CreateChild_menu_item = &New Child
 _UI_CreateSibling_menu_item = N&ew Sibling
@@ -34,13 +34,13 @@ _UI_Wizard_category = ERA
 
 _UI_CreateModelError_message = Problems encountered in file "{0}"
 
-_UI_RifModelWizard_label = ERA specification document
-_UI_RifModelWizard_description = Create new specification document
+_UI_ErfModelWizard_label = ERA specification document
+_UI_ErfModelWizard_description = Create new specification document
 
-_UI_RifEditor_label = ERA Specification Editor
+_UI_ErfEditor_label = ERA Specification Editor
 
-_UI_RifEditorFilenameDefaultBase = NewSpecification
-_UI_RifEditorFilenameExtensions = erf
+_UI_ErfEditorFilenameDefaultBase = NewSpecification
+_UI_ErfEditorFilenameExtensions = erf
 
 _UI_Wizard_label = New
 
