--- a/sys-src/era.foss.typeeditor/plugin.properties
+++ b/sys-src/era.foss.typeeditor/plugin.properties
@@ -3,7 +3,7 @@
 # </copyright>
 #
 
-pluginName = Era Rif Types Editor
+pluginName = Era Erf Types Editor
 providerName = Three Good Friends (3GF)
 
 ##########
