--- a/sys-src/era.foss.erf/.settings/org.eclipse.core.resources.prefs
+++ b/sys-src/era.foss.erf/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
-#Wed Dec 08 23:34:13 CET 2010
+#Sun Jan 09 16:41:20 CET 2011
 eclipse.preferences.version=1
+encoding//model/erf.ecorediag=UTF-8
 encoding/<project>=UTF-8
