Rename model to model transformations for exporter plugin

--- a/sys-src/era.foss.erf.exporter.m2m/.project
+++ b/sys-src/era.foss.erf.exporter.m2m/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>era.foss.erf.exporter</name>
+	<name>era.foss.erf.exporter.m2m</name>
 	<comment></comment>
 	<projects>
 	</projects>
