Rename rif to erf (step4)

--- a/sys-src/era.foss.erf.edit/plugin.properties
+++ b/sys-src/era.foss.erf.edit/plugin.properties
@@ -4,7 +4,7 @@
 #
 # $Id$
 
-pluginName = Rif Edit Support
+pluginName = Erf Edit Support
 providerName = www.example.org
 
 _UI_CreateChild_text = {0}
@@ -16,7 +16,7 @@ _UI_CreateSibling_description = Create a new sibling of type {0} for the selecte
 
 _UI_PropertyDescriptor_description = The {0} of the {1}
 
-_UI_RIF_type = RIF
+_UI_ERF_type = ERF
 _UI_AttributeDefinition_type = Attribute Definition
 _UI_AttributeValue_type = Attribute Value
 _UI_DatatypeDefinition_type = Datatype Definition
@@ -28,14 +28,14 @@ _UI_AttributeValueSimple_type = Attribute Value Simple
 _UI_DatatypeDefinitionInteger_type = Integer
 _UI_DatatypeDefinitionSimple_type = Datatype Definition Simple
 _UI_DatatypeDefinitionString_type = String
-_UI_RIFContent_type = RIF Content
+_UI_ERFContent_type = ERF Content
 _UI_Identifiable_type = Identifiable
 _UI_AttributeDefinitionSimple_type = Attribute Definition Simple
 _UI_Unknown_type = Object
 
 _UI_Unknown_datatype= Value
 
-_UI_RIF_coreContent_feature = Core Content
+_UI_ERF_coreContent_feature = Core Content
 _UI_AttributeDefinition_type_feature = Type
 _UI_SpecElementWithUserDefinedAttributes_values_feature = Values
 _UI_SpecElementWithUserDefinedAttributes_type_feature = Type
@@ -45,9 +45,9 @@ _UI_AttributeValueSimple_definition_feature = Definition
 _UI_DatatypeDefinitionInteger_max_feature = Max
 _UI_DatatypeDefinitionInteger_min_feature = Min
 _UI_DatatypeDefinitionString_maxLength_feature = Max Length
-_UI_RIFContent_specObjects_feature = Spec Objects
-_UI_RIFContent_specTypes_feature = Spec Types
-_UI_RIFContent_dataTypes_feature = Data Types
+_UI_ERFContent_specObjects_feature = Spec Objects
+_UI_ERFContent_specTypes_feature = Spec Types
+_UI_ERFContent_dataTypes_feature = Data Types
 _UI_Identifiable_iD_feature = ID
 _UI_Identifiable_desc_feature = Description
 _UI_Identifiable_longName_feature = Long Name
@@ -57,3 +57,9 @@ _UI_Unknown_feature = Unspecified
 
 
 
+_UI_ERF_type = ERF
+_UI_Content_type = Content
+_UI_ERF_coreContent_feature = Core Content
+_UI_Content_specObjects_feature = Spec Objects
+_UI_Content_specTypes_feature = Spec Types
+_UI_Content_dataTypes_feature = Data Types
