--- a/sys-src/era.foss.erf.editor/plugin.properties
+++ b/sys-src/era.foss.erf.editor/plugin.properties
@@ -4,10 +4,10 @@
 #
 # $Id$
 
-pluginName = Rif Editor
+pluginName = Erf Editor
 providerName = www.example.org
 
-_UI_RifEditor_menu = &Rif Editor
+_UI_ErfEditor_menu = &Erf Editor
 
 _UI_CreateChild_menu_item = &New Child
 _UI_CreateSibling_menu_item = N&ew Sibling
@@ -34,13 +34,13 @@ _UI_Wizard_category = Example EMF Model Creation Wizards
 
 _UI_CreateModelError_message = Problems encountered in file "{0}"
 
-_UI_RifModelWizard_label = Rif Model
-_UI_RifModelWizard_description = Create a new Rif model
+_UI_ErfModelWizard_label = Erf Model
+_UI_ErfModelWizard_description = Create a new Erf model
 
-_UI_RifEditor_label = ERA Rif Model Editor (EMF-gen)
+_UI_ErfEditor_label = ERA Erf Model Editor (EMF-gen)
 
-_UI_RifEditorFilenameDefaultBase = My
-_UI_RifEditorFilenameExtensions = erf
+_UI_ErfEditorFilenameDefaultBase = My
+_UI_ErfEditorFilenameExtensions = erf
 
 _UI_Wizard_label = New
 
@@ -55,3 +55,9 @@ _UI_Wizard_initial_object_description = Select a model object to create
 _UI_FileConflict_label = File Conflict
 _WARN_FileConflict = There are unsaved changes that conflict with changes made outside the editor.  Do you wish to discard this editor's changes?
 
+_UI_ErfEditor_menu = &Erf Editor
+_UI_ErfModelWizard_label = Erf Model
+_UI_ErfModelWizard_description = Create a new Erf model
+_UI_ErfEditor_label = Erf Model Editor
+_UI_ErfEditorFilenameDefaultBase = My
+_UI_ErfEditorFilenameExtensions = erf
