--- a/sys-src/era.foss.objecteditor/plugin.properties
+++ b/sys-src/era.foss.objecteditor/plugin.properties
@@ -34,10 +34,10 @@ _UI_Wizard_category = ERA
 
 _UI_CreateModelError_message = Problems encountered in file "{0}"
 
-_UI_ErfModelWizard_label = ERA specification document
-_UI_ErfModelWizard_description = Create new specification document
+_UI_ErfModelWizard_label = ERA model (.erf)
+_UI_ErfModelWizard_description = Create new requirements document
 
-_UI_ErfEditor_label = ERA Specification Editor
+_UI_ErfEditor_label = ERA Editor
 
 _UI_ErfEditorFilenameDefaultBase = NewSpecification
 _UI_ErfEditorFilenameExtensions = erf
