Provide Custom Detail Viewer for DataType defintions and Attrubute Definitions

--- a/sys-src/era.foss.erf.edit/plugin.properties
+++ b/sys-src/era.foss.erf.edit/plugin.properties
@@ -37,6 +37,8 @@ _UI_Unknown_datatype= Value
 
 _UI_ERF_coreContent_feature = Core Content
 _UI_AttributeDefinition_type_feature = Type
+_UI_AttributeDefinition_ident_feature = ID
+_UI_AttributeDefinition_unique_feature = Unique
 _UI_SpecElementWithUserDefinedAttributes_values_feature = Values
 _UI_SpecElementWithUserDefinedAttributes_type_feature = Type
 _UI_SpecType_specAttributes_feature = Spec Attributes
@@ -55,11 +57,10 @@ _UI_AttributeDefinitionSimple_defaultValue_feature = Default Value
 _UI_Unknown_feature = Unspecified
 
 
-
-
 _UI_ERF_type = ERF
 _UI_Content_type = Content
 _UI_ERF_coreContent_feature = Core Content
 _UI_Content_specObjects_feature = Spec Objects
 _UI_Content_specTypes_feature = Spec Types
 _UI_Content_dataTypes_feature = Data Types
+
