Fix problem with widgets not updating the model

--- a/sys-src/era.foss.erf.edit/plugin.properties
+++ b/sys-src/era.foss.erf.edit/plugin.properties
@@ -52,7 +52,7 @@ _UI_ERFContent_specTypes_feature = Spec Types
 _UI_ERFContent_dataTypes_feature = Data Types
 _UI_Identifiable_iD_feature = ID
 _UI_Identifiable_desc_feature = Description
-_UI_Identifiable_longName_feature = Long Name
+_UI_Identifiable_longName_feature = Name
 _UI_AttributeDefinitionSimple_defaultValue_feature = Default Value
 _UI_Unknown_feature = Unspecified
 
