Beatification of Details Viewer (title, border alignment)

--- a/sys-src/era.foss.typeeditor/plugin.properties
+++ b/sys-src/era.foss.typeeditor/plugin.properties
@@ -28,5 +28,8 @@ _UI_AttributeDefinitionName_label = Name
 _UI_AttributeDefinitionType_label = Data Type
 _UI_AttributeDefinitionDefaultValue_label = Default Value
 
+# Detail viewer
+_UI_DetailViewer_title = Details
+
 
 
