--- a/sys-src/era.foss.erf/.settings/org.eclipse.core.resources.prefs
+++ b/sys-src/era.foss.erf/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
-#Sun Jan 09 16:41:20 CET 2011
+#Wed Jan 12 20:57:32 CET 2011
 eclipse.preferences.version=1
+encoding//model/erf.ecore_diagram=UTF-8
 encoding//model/erf.ecorediag=UTF-8
 encoding/<project>=UTF-8
