Use Databinding API for List containing Attribute Definitions

--- a/sys-src/era.foss.erf.edit/plugin.properties
+++ b/sys-src/era.foss.erf.edit/plugin.properties
@@ -64,3 +64,9 @@ _UI_Content_specObjects_feature = Spec Objects
 _UI_Content_specTypes_feature = Spec Types
 _UI_Content_dataTypes_feature = Data Types
 
+_UI_SpecRelation_type = Spec Relation
+_UI_SpecObject_sources_feature = Sources
+_UI_SpecObject_targets_feature = Targets
+_UI_Content_specRelations_feature = Spec Relations
+_UI_SpecRelation_source_feature = Source
+_UI_SpecRelation_target_feature = Target
