Add attributes for editor column layout Use UI Annotation for finding object and features to observe for references

--- a/sys-src/era.foss.erf.edit/plugin.properties
+++ b/sys-src/era.foss.erf.edit/plugin.properties
@@ -70,3 +70,7 @@ _UI_SpecObject_targets_feature = Targets
 _UI_Content_specRelations_feature = Spec Relations
 _UI_SpecRelation_source_feature = Source
 _UI_SpecRelation_target_feature = Target
+_UI_AttributeDefinition_editorShowLabel_feature = Show Name in Editor
+_UI_AttributeDefinition_editorRowNumber_feature = Editor Row Number
+_UI_AttributeDefinition_editorColumnSpan_feature = Editor Column Span
+_UI_AttributeDefinition_uiShowLabel_feature = Ui Show Label
