* Nebula-based Editor (as secondary editor, currently being integrated als Part in the generated Editor)

--- a/sys-src/era.foss.erf.editor/plugin.xml
+++ b/sys-src/era.foss.erf.editor/plugin.xml
@@ -32,7 +32,7 @@
  -->
    <extension point="org.eclipse.ui.editors">
       <editor
-            id="era.foss.erf.editor"
+            id="era.editor.sec"
             name="%_UI_ErfEditor_label"
             class="era.foss.erf.presentation.ErfEditor"
             contributorClass="era.foss.erf.presentation.ErfActionBarContributor">
