+ Support containments in detail viewer + Provide own UpdateStrategy for databinding for text widgets as default strategy does not support un-setting of elements

--- a/sys-src/era.foss.erf.edit/plugin.properties
+++ b/sys-src/era.foss.erf.edit/plugin.properties
@@ -70,7 +70,9 @@ _UI_SpecObject_targets_feature = Targets
 _UI_Content_specRelations_feature = Spec Relations
 _UI_SpecRelation_source_feature = Source
 _UI_SpecRelation_target_feature = Target
-_UI_AttributeDefinition_editorShowLabel_feature = Show Name in Editor
-_UI_AttributeDefinition_editorRowNumber_feature = Editor Row Number
-_UI_AttributeDefinition_editorColumnSpan_feature = Editor Column Span
-_UI_AttributeDefinition_uiShowLabel_feature = Ui Show Label
+
+_UI_AttributeDefinitionUiProperties_type = Attribute Definition Ui Properties
+_UI_AttributeDefinition_uiProperties_feature = View
+_UI_AttributeDefinitionUiProperties_editorShowLabel_feature = Editor Show Label
+_UI_AttributeDefinitionUiProperties_editorRowNumber_feature = Editor Row Number
+_UI_AttributeDefinitionUiProperties_editorColumnSpan_feature = Editor Column Span
