Make nebula library available in object editor plugin

--- a/sys-src/era.foss.objecteditor/build.properties
+++ b/sys-src/era.foss.objecteditor/build.properties
@@ -9,7 +9,9 @@ bin.includes = .,\
                META-INF/,\
                plugin.xml,\
                plugin.properties,\
-               lib/
+               lib/,\
+               lib/org.eclipse.nebula.widgets.compositetable.jar
 jars.compile.order = .
 source.. = src/
 output.. = bin/
+jars.extra.classpath = lib/org.eclipse.nebula.widgets.compositetable.jar
