+ Add Enumeration Datatypes + Remove generic creation of element details in the detail viewer

--- a/sys-src/era.foss.erf.edit/plugin.properties
+++ b/sys-src/era.foss.erf.edit/plugin.properties
@@ -24,10 +24,13 @@ _UI_SpecElementWithUserDefinedAttributes_type = Spec Element With User Defined A
 _UI_SpecObject_type = Spec Object
 _UI_SpecType_type = Spec Type
 _UI_Map_type = Map
-_UI_AttributeValueSimple_type = Attribute Value Simple
-_UI_DatatypeDefinitionInteger_type = Integer
 _UI_DatatypeDefinitionSimple_type = Datatype Definition Simple
+_UI_AttributeValueSimple_type = Attribute Value Simple
+
+_UI_DatatypeDefinitionInteger_type = Integer
 _UI_DatatypeDefinitionString_type = String
+_UI_DatatypeDefinitionEnumeration_type = Enumeration
+
 _UI_ERFContent_type = ERF Content
 _UI_Identifiable_type = Identifiable
 _UI_AttributeDefinitionSimple_type = Attribute Definition Simple
@@ -76,3 +79,17 @@ _UI_AttributeDefinition_uiProperties_feature = View
 _UI_AttributeDefinitionUiProperties_editorShowLabel_feature = Editor Show Label
 _UI_AttributeDefinitionUiProperties_editorRowNumber_feature = Editor Row Number
 _UI_AttributeDefinitionUiProperties_editorColumnSpan_feature = Editor Column Span
+_UI_EmbeddedValue_type = Embedded Value
+_UI_EnumValue_type = Enum Value
+_UI_EmbeddedValue_key_feature = Key
+_UI_EmbeddedValue_otherContent_feature = Other Content
+_UI_EnumValue_properties_feature = Properties
+_UI_DatatypeDefinitionEnumeration_specifiedValues_feature = Specified Values
+_UI_AttributeDefinitionEnumeration_type = Attribute Definition Enumeration
+_UI_AttributeValueEnumeration_type = Attribute Value Enumeration
+_UI_AttributeDefinitionEnumeration_multiValued_feature = Multi Valued
+_UI_AttributeDefinitionEnumeration_defaultValue_feature = Default Value
+_UI_AttributeValueEnumeration_values_feature = Values
+_UI_AttributeValue_definition_feature = Definition
+_UI_DatatypeDefinition_attributeDefintions_feature = Attribute Defintions
+_UI_DatatypeDefinition_attributeDefinitions_feature = Attribute Definitions
