--- a/sys-src/era.foss.erf/.settings/org.eclipse.core.resources.prefs
+++ b/sys-src/era.foss.erf/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,4 @@
-#Wed Mar 23 22:43:31 CET 2011
+#Tue Jun 07 23:32:19 CEST 2011
 eclipse.preferences.version=1
 encoding//model/erf.ecorediag=UTF-8
 encoding/<project>=UTF-8
