Add Boolean Datatype

--- a/sys-src/era.foss.erf.edit/plugin.properties
+++ b/sys-src/era.foss.erf.edit/plugin.properties
@@ -30,6 +30,7 @@ _UI_AttributeValueSimple_type = Attribute Value Simple
 _UI_DatatypeDefinitionInteger_type = Integer
 _UI_DatatypeDefinitionString_type = String
 _UI_DatatypeDefinitionEnumeration_type = Enumeration
+_UI_DatatypeDefinitionBoolean_type = Boolean
 
 _UI_ERFContent_type = ERF Content
 _UI_Identifiable_type = Identifiable
@@ -93,3 +94,8 @@ _UI_AttributeValueEnumeration_values_feature = Values
 _UI_AttributeValue_definition_feature = Definition
 _UI_DatatypeDefinition_attributeDefintions_feature = Attribute Defintions
 _UI_DatatypeDefinition_attributeDefinitions_feature = Attribute Definitions
+
+_UI_AttributeDefinitionBoolean_type = Attribute Definition Boolean
+_UI_AttributeValueBoolean_type = Attribute Value Boolean
+_UI_AttributeDefinitionBoolean_defaultValue_feature = Default Value
+_UI_AttributeValueBoolean_theValue_feature = The Value
