Extend model by tool specific view type

--- a/sys-src/era.foss.erf.edit/plugin.properties
+++ b/sys-src/era.foss.erf.edit/plugin.properties
@@ -99,3 +99,13 @@ _UI_AttributeDefinitionBoolean_type = Attribute Definition Boolean
 _UI_AttributeValueBoolean_type = Attribute Value Boolean
 _UI_AttributeDefinitionBoolean_defaultValue_feature = Default Value
 _UI_AttributeValueBoolean_theValue_feature = The Value
+_UI_ErfToolExtension_type = Tool Extension
+_UI_ToolExtension_type = Tool Extension
+_UI_View_type = View
+_UI_ViewElement_type = View Element
+_UI_ERF_toolExtensions_feature = Tool Extensions
+_UI_ErfToolExtension_views_feature = Views
+_UI_View_viewElements_feature = View Elements
+_UI_ViewElement_editorShowLabel_feature = Editor Show Label
+_UI_ViewElement_editorRowNumber_feature = Editor Row Number
+_UI_ViewElement_editorColumnSpan_feature = Editor Column Span
