+ Rename ErfToolExtension to EraToolExtension + Add reference from Viewelement to AttributeDefinition

--- a/sys-src/era.foss.erf.edit/plugin.properties
+++ b/sys-src/era.foss.erf.edit/plugin.properties
@@ -109,3 +109,6 @@ _UI_View_viewElements_feature = View Elements
 _UI_ViewElement_editorShowLabel_feature = Editor Show Label
 _UI_ViewElement_editorRowNumber_feature = Editor Row Number
 _UI_ViewElement_editorColumnSpan_feature = Editor Column Span
+_UI_EraToolExtension_type = Era Tool Extension
+_UI_EraToolExtension_views_feature = Views
+_UI_ViewElement_attributeDefintion_feature = Attribute Defintion
