--- a/sys-src/era.foss.typeeditor/plugin.properties
+++ b/sys-src/era.foss.typeeditor/plugin.properties
@@ -10,6 +10,7 @@ providerName = Three Good Friends (3GF)
 # Labels #
 ##########
 
+_UI_Type_Editor_label = Type Editor
 
 _UI_Description_label = Description
 
