First usable version of view editor

--- a/sys-src/era.foss.erf.edit/plugin.properties
+++ b/sys-src/era.foss.erf.edit/plugin.properties
@@ -92,7 +92,6 @@ _UI_AttributeDefinitionEnumeration_multiValued_feature = Multi Valued
 _UI_AttributeDefinitionEnumeration_defaultValue_feature = Default Value
 _UI_AttributeValueEnumeration_values_feature = Values
 _UI_AttributeValue_definition_feature = Definition
-_UI_DatatypeDefinition_attributeDefintions_feature = Attribute Defintions
 _UI_DatatypeDefinition_attributeDefinitions_feature = Attribute Definitions
 
 _UI_AttributeDefinitionBoolean_type = Attribute Definition Boolean
@@ -111,4 +110,6 @@ _UI_ViewElement_editorRowNumber_feature = Editor Row Number
 _UI_ViewElement_editorColumnSpan_feature = Editor Column Span
 _UI_EraToolExtension_type = Era Tool Extension
 _UI_EraToolExtension_views_feature = Views
-_UI_ViewElement_attributeDefintion_feature = Attribute Defintion
+_UI_ViewElement_attributeDefintion_feature = Attribute Definition
+_UI_ViewElement_attributeDefinition_feature = Attribute Definition
+_UI_AttributeDefinition_specType_feature = Spec Type
