--- a/sys-src/era.foss.vieweditor/plugin.properties
+++ b/sys-src/era.foss.vieweditor/plugin.properties
@@ -7,3 +7,4 @@ pluginName = Era Erf Types Editor
 providerName = Three Good Friends (3GF)
 
 _UI_View_Editor_label = View Editor
+_UI_Details_label = Details
