--- a/sys-src/era.foss.tracer/plugin.xml
+++ b/sys-src/era.foss.tracer/plugin.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.0"?>
 
-<!--
+	<!--
  <copyright>
  </copyright>
 
@@ -11,56 +11,97 @@
 <plugin>
 
 
-   <extension
-         point="org.eclipse.ui.menus">
-      <menuContribution
-            locationURI="menu:org.eclipse.ui.main.menu">
-         <menu
-               id="era.foss.tracer.menu"
-               label="ERA Tracer">
-         </menu>
-      </menuContribution>
-   </extension>
+	<extension point="org.eclipse.ui.menus">
+		<menuContribution locationURI="menu:org.eclipse.ui.main.menu">
+			<menu id="era.foss.tracer.menu" label="ERA Tracer">
+			</menu>
+		</menuContribution>
+	</extension>
 
 
-   <extension
-         point="org.eclipse.ui.commands">
-      <command
-            id="era.foss.tracer.command"
-            name="ERA Tracer Command"
-             description="Run the ERA Tracer" >
-      </command>
-   </extension>
-   <extension
-         point="org.eclipse.ui.handlers">
-      <handler
-            class="cpn.sandbox.CpnParserA"
-            commandId="era.foss.tracer.command">
-      </handler>
-   </extension>
-   <extension
-         point="org.eclipse.ui.menus">
-      <menuContribution
-            locationURI="menu:era.foss.tracer.menu">
-         <command
-               commandId="era.foss.tracer.command"
-               label="Run: CpnParserA"
-               style="push" >
-         </command>
-      </menuContribution>
-   </extension>
+	<extension point="org.eclipse.ui.commands">
+		<command id="era.foss.tracer.command" name="ERA Tracer Command"
+			description="Run the ERA Tracer">
+		</command>
+	</extension>
+	<extension point="org.eclipse.ui.handlers">
+		<handler class="cpn.sandbox.CpnParserA" commandId="era.foss.tracer.command">
+		</handler>
+	</extension>
+	<extension point="org.eclipse.ui.menus">
+		<menuContribution locationURI="menu:era.foss.tracer.menu">
+			<command commandId="era.foss.tracer.command" label="Run: CpnParserA"
+				style="push">
+			</command>
+		</menuContribution>
+	</extension>
 
 
 
-   <extension
-      id="mybuilder" name="Era Tracer Builder" point="org.eclipse.core.resources.builders">
-      <builder>
-         <run 
-            class="era.foss.tracer.EraIncrementalProjectBuilder">
-            <parameter name="optimize" value="true" />
-            <parameter name="comment" value="Era Tracer Incremental Builder" />
-         </run>
-      </builder>
-   </extension>
-   
+	<extension id="eratracerbuilder" name="Era Tracer Builder"
+		point="org.eclipse.core.resources.builders">
+		<builder>
+			<run class="era.foss.tracer.EraIncrementalProjectBuilder">
+				<parameter name="optimize" value="true" />
+				<parameter name="comment" value="Era Tracer Incremental Builder" />
+			</run>
+		</builder>
+	</extension>
+
+	<extension point="org.eclipse.core.resources.natures" id="eratracernature"
+		name="ERA Tracer Nature">
+		<runtime>
+			<run class="era.foss.tracer.EraTracerNature">
+			</run>
+		</runtime>
+		<requires-nature id="org.eclipse.jdt.core.javanature" />
+	</extension>
+
+	<extension point="org.eclipse.ui.newWizards">
+		<category id="era.foss.wizardcategory" name="%_UI_Wizard_category" />
+		<wizard canFinishEarly="true" category="era.foss.wizardcategory"
+			class="era.foss.tracer.wizard.TracerNewProjectWizard" hasPages="true"
+			id="era.foss.tracerWizard" name="Add ERA Tracability to Project"
+			project="false">
+			<selection class="org.eclipse.core.resources.IProject">
+			</selection>
+		</wizard>
+		<primaryWizard id="era.foss.tracerWizard" />
+	</extension>
+
+	<!--
+		see:
+		http://source.jboss.org/browse/JBossTools/trunk/jsf/plugins/org.jboss.tools.jsf.ui/plugin.xml
+	-->
+	<extension point="org.eclipse.ui.popupMenus">
+		<objectContribution id="era.foss.tracer.ui.project.configure"
+			objectClass="org.eclipse.core.resources.IProject" adaptable="true">
+			<visibility>
+				<and>
+					<objectState name="projectNature" value="org.eclipse.jdt.core.javanature" />
+					<not>
+						<objectState name="projectNature" value="era.foss.tracer.eratracernature" />
+					</not>
+				</and>
+			</visibility>
+			<action class="era.foss.tracer.AddEraTracerNatureActionDelegate"
+				enablesFor="1" id="era.foss.tracer.AddEraTracerNatureActionDelegate"
+				label="Add ERA Tracer Nature" menubarPath="org.eclipse.ui.projectConfigure/additions">
+			</action>
+		</objectContribution>
+		<objectContribution id="era.foss.tracer.ui.project.configure"
+			objectClass="org.eclipse.core.resources.IProject" adaptable="true">
+			<visibility>
+				<and>
+					<objectState name="projectNature" value="org.eclipse.jdt.core.javanature" />
+					<objectState name="projectNature" value="era.foss.tracer.eratracernature" />
+				</and>
+			</visibility>
+			<action class="era.foss.tracer.RemoveEraTracerNatureActionDelegate"
+				enablesFor="1" id="era.foss.tracer.RemoveEraTracerNatureActionDelegate"
+				label="Remove ERA Tracer Nature" menubarPath="org.eclipse.ui.projectConfigure/additions">
+			</action>
+		</objectContribution>
+	</extension>
+
 </plugin>
